@@ -1,5 +1,10 @@
 2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* src/plugins/Makefile.am (pkginclude_HEADERS): Install plugin.h
+	under pkgincludedir instead of includedir.
+
+2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* configure.ac: Missing copyright notices added.
 
 2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>
